more color contrast corrections

--- a/styles/base.css
+++ b/styles/base.css
@@ -15,18 +15,18 @@ header {
 
 .links {
     display: flex;
+    color: #fff;
     justify-content: space-evenly;
     background-color: rgb(40, 39, 39);
     padding: 10px;
 }
 
-.links a {
+nav a {
     display: block;
     text-decoration: none;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
-
 }
 
 nav a:hover {
